--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,13 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'io.realm:android-adapters:2.0.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+repositories {
+    maven { url 'https://jitpack.io' }
 }
