add functionality to change mood back to default if current day changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.othman.moodtracker">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.othman.moodtracker"
+    tools:ignore="GoogleAppIndexingWarning">
 
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.PieChartActivity"></activity>
+        <activity android:name=".controller.PieChartActivity"/>
         <activity android:name=".controller.HistoryActivity" />
         <activity android:name=".controller.MainActivity">
             <intent-filter>
