Clean code after lint analyzing and final modifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     tools:ignore="GoogleAppIndexingWarning">
 
     <application
-        android:name=".MainApplication"
+        android:name=".controller.MainApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
